<resources>
    <string name="app_name">Assignment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_btn_text">Contacts</string>
    <string name="favourites_btn_text">Favourites</string>
    <string name="restore_btn_text">Restore</string>
    <string name="delete_btn_text">Delete</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_deleted_contacts">DeletedContactsActivity</string>
    <string name="custom_row_name_textView">Name</string>
    <string name="custom_row_number_textView">Number</string>
    <string name="custom_row_favorite_btn">Favorite</string>
    <string name="custom_row_delete_btn">Delete</string>
    <string name="call_user_choice_text">1. Place a Call</string>
    <string name="msg_user_choice_text">2. Send a Message</string>

</resources>
