<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"

    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contacts_btn"

        android:text="@string/contacts_btn_text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favourites_btn"
       android:layout_marginLeft="5dp"
        android:text="@string/favourites_btn_text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_btn"
        android:layout_marginLeft="5dp"
        android:text="@string/delete_btn_text"
        />





</LinearLayout>
